@@ -49,9 +49,17 @@
 	  -sheader $*.server.h -server $*.server.c	\
 	  -user /dev/null -header /dev/null		\
 	  < $<
+%.msgids: lib_dep_tr_for_defs_a-%.server.defs.$(OBJEXT)
+	$(MIGCOM) $(MIGCOMFLAGS)		\
+	  -n -list $@				\
+	  < $<
 %.user.h %.user.c: lib_dep_tr_for_defs_a-%.user.defs.$(OBJEXT)
 	$(MIGCOM) $(MIGCOMFLAGS) $(MIGCOMUFLAGS)		\
 	  -user $*.user.c -server /dev/null -header $*.user.h	\
+	  < $<
+%.msgids: lib_dep_tr_for_defs_a-%.user.defs.$(OBJEXT)
+	$(MIGCOM) $(MIGCOMFLAGS)		\
+	  -n -list $@				\
 	  < $<
 
 # TODO.  Get rid of the .srv files and rather use .defs files and MIG*SFLAGS?
